# agentic-ai-tasks

./: .gitignore  README.MD
chatbot-1/python-chatbot/: README.md  pyproject.toml
chatbot-1/python-chatbot/src/: agent.py  app.py  config.py  db.py  main.py  utils.py
chatbot-1/python-chatbot/tests/: test_agent.py  test_db.py
langchain-projects/: output.txt  pyproject.toml
langchain-projects/1_chat_models/: 2_chat_model_basic_conversation.py  3_chat_model_alternatives.py  4_chat_model_conversation_with_user.py  5_chat_model_save_message_history_firebase.py
langchain-projects/2_prompt_templates/: 1_prompt_template_basic.py
langchain-projects/test-projects/: chatbot.py
lesson-2/: agent.py  app.py  custom_sxceptions.py  db.py  requirements.txt  setup_db.py
lesson-3/: agent.py  app.py  chatbot.py  custom_functions.py  functional_config.py  main.py  pretty_print.py
lesson-4/: .gitignore  main.py
p1/: history.txt  main.py
p2/: db.py  main.py
